--- a/resources/src/admin/lang/en/nav.json
+++ b/resources/src/admin/lang/en/nav.json
@@ -1,3 +1,9 @@
 {
-  "hello": "Hello"
+  "hello": "Hello",
+  "my_account": "My Account",
+  "account_setting": "Account settings",
+  "logout": "Logout",
+  "dashboard": "Dashboard",
+  "users": "Users",
+  "main": "Main"
 }
